objects/ssot__ContractLine__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssetId__c</fullName>
        <label>Asset</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContractId__c</fullName>
        <label>Contract</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContractLineStatus__c</fullName>
        <label>Contract Line Status</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContractLine_AssetId_map_Asset_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContractLine_AssetId_map_Asset_Id_N_1</label>
        <referenceTo>ssot__Asset__dlm</referenceTo>
        <relationshipLabel>ContractLine_AssetId_map_Asset_Id_N_1</relationshipLabel>
        <relationshipName>ContractLine_AssetId_map_Asset_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__ContractLine_CreatedById_map_User_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContractLine_CreatedById_map_User_Id_N_1</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>ContractLine_CreatedById_map_User_Id_N_1</relationshipLabel>
        <relationshipName>ContractLine_CreatedById_map_User_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiscountPercent__c</fullName>
        <label>Discount Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EndDateTime__c</fullName>
        <label>End DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Contract Line Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LineItemNumber__c</fullName>
        <label>Line Item Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LocationId__c</fullName>
        <label>Location</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentContractLineId__c</fullName>
        <label>Parent Contract Line</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PriceBookEntryId__c</fullName>
        <label>Price Book Entry</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductId__c</fullName>
        <label>Product</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductPriceAmount__c</fullName>
        <label>Product Price Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ProductQuantity__c</fullName>
        <label>Product Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RootContractLineId__c</fullName>
        <label>Root Contract Line</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDateTime__c</fullName>
        <label>Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SubtotalAmount__c</fullName>
        <label>Subtotal Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SystemModstamp__c</fullName>
        <label>System Modified Stamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__TotalPriceAmount__c</fullName>
        <label>Total Price Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__UnitPriceAmount__c</fullName>
        <label>Unit Price Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009455598_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContractLine_LastModifiedById_map_Us_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>ContractLine_LastModifiedById_map_Us_rel</relationshipLabel>
        <relationshipName>rel_1702009455598_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009456149_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContractLine_RootContractLineId_map__rel</label>
        <referenceTo>ssot__ContractLine__dlm</referenceTo>
        <relationshipLabel>ContractLine_RootContractLineId_map__rel</relationshipLabel>
        <relationshipName>rel_1702009456149_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009457067_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContractLine_ParentContractLineId_ma_rel</label>
        <referenceTo>ssot__ContractLine__dlm</referenceTo>
        <relationshipLabel>ContractLine_ParentContractLineId_ma_rel</relationshipLabel>
        <relationshipName>rel_1702009457067_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>